[MediaControls] Hide overflow menu and closed caption list when clicking on some MediaControl elements

Some MediaControl elements trap click events and prevent the event being fired
on parent elements. This CL adds additional EventHandlers to these
event-trapping elements to hide MediaControls correctly.

BUG=654637

Review-Url: https://codereview.chromium.org/2414653002
Cr-Commit-Position: refs/heads/master@{#425573}

Former-commit-id: 9e83c349b6790b8b5514cc40df8c7be4cf4f2e29