third_party/WebKit/Source/core/html/shadow/MediaControlsWindowEventListener.cpp
@@ -39,6 +39,14 @@ void MediaControlsWindowEventListener::start() {
 
   if (LocalDOMWindow* window = getLocalDOMWindow()) {
     window->addEventListener(EventTypeNames::click, this, false);
+    m_mediaControls->panelElement()->addEventListener(EventTypeNames::click,
+                                                      this, false);
+    m_mediaControls->timelineElement()->addEventListener(EventTypeNames::click,
+                                                         this, false);
+    m_mediaControls->castButtonElement()->addEventListener(
+        EventTypeNames::click, this, false);
+    m_mediaControls->volumeSliderElement()->addEventListener(
+        EventTypeNames::click, this, false);
     m_isActive = true;
   }
 }
@@ -47,8 +55,17 @@ void MediaControlsWindowEventListener::stop() {
   if (!m_isActive)
     return;
 
-  if (LocalDOMWindow* window = getLocalDOMWindow())
+  if (LocalDOMWindow* window = getLocalDOMWindow()) {
     window->removeEventListener(EventTypeNames::click, this, false);
+    m_mediaControls->panelElement()->removeEventListener(EventTypeNames::click,
+                                                         this, false);
+    m_mediaControls->timelineElement()->removeEventListener(
+        EventTypeNames::click, this, false);
+    m_mediaControls->castButtonElement()->removeEventListener(
+        EventTypeNames::click, this, false);
+    m_mediaControls->volumeSliderElement()->removeEventListener(
+        EventTypeNames::click, this, false);
+  }
   m_isActive = false;
 }
 
